<resources>
    <string name="app_name">CrudApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Lista clientes</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="username_description">Informe seu usuário</string>
    <string name="password_description">Informe sua senha</string>
    <string name="sign_in">Entrar</string>
    <string name="button_add_user_description">Adicionar usuário</string>

    <string name="add_user_address">Endereço</string>
    <string name="add_user_age">Idade</string>
    <string name="add_user_email">E-mail</string>
    <string name="add_user_name">Nome</string>
    <string name="add_user_password">Senha</string>
    <string name="add_user_password_confirmation">Confirmação de senha</string>
    <string name="add_user_save">Salvar</string>

    <string name="default_username">string</string>
    <string name="default_password">string</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>